--- a/doc/user_manual/include/MaintenanceModels.tex
+++ b/doc/user_manual/include/MaintenanceModels.tex
@@ -1,9 +1,6 @@
 \section{Maintenance Models}
 \label{sec:MaintenanceModels}
 
-
-
-
 \textbf{Maintenance Models} are models designed to model maintenance and testing from a reliability perspective. 
 These models are designed to optimize preventive maintenance at the system level. 
 
@@ -26,7 +23,7 @@ In the maintenance \xmlNode{ExternalModel} input block, the following XML sub-no
 \begin{itemize}
 	\item \xmlNode{variable}, \xmlDesc{string, required parameter}. Comma-separated list of variable
 	names. Each variable name needs to match a variable used/defined in the maintenance model or variable
-	coming from other RAVEN entity (i.e. Samplers, DataObjects and Models).
+	coming from other RAVEN entity (i.e., Samplers, DataObjects and Models).
 	\nb For all the maintenance models, the following outputs variables would be available. If the user
 	added these output variables in the node \xmlNode{variables}, these variables would be also available to
 	for use anywhere in the RAVEN input to refer to the maintenance model output variables.
