--- a/doc/user_manual/include/RBDmodel.tex
+++ b/doc/user_manual/include/RBDmodel.tex
@@ -2,7 +2,8 @@
 \label{sec:RBDmodel}
 
 This model is designed to read from file the structure of the reliability block diagram (RBD) and import such Boolean logic structure as a RAVEN model.
-The RBD must be specified in a specific format. As an example, the RBD of Fig.~\ref{fig:RBD} is translated in the RAVEN format as shown below:
+The RBD must be specified in a specific format. 
+As an example, the RBD of Fig.~\ref{fig:RBD} is translated in the RAVEN format as shown below:
 
 \begin{lstlisting}[style=XML,morekeywords={anAttribute},caption=RBD input file., label=lst:RBDmodel]
 <Graph name="testGraph">
