--- a/doc/user_manual/include/ETdataImporter.tex
+++ b/doc/user_manual/include/ETdataImporter.tex
@@ -1,12 +1,12 @@
-\section{ET Data Importer}
+\section{Event Tree Data Importer}
 \label{sec:ETdataImporter}
 
 This post-processor is designed to import an ET as a PointSet in RAVEN.
 The ET must be in: the OpenPSA format (\href{<url>}{https://github.com/open-psa}).
-The details about this post-processor can be found in RAVEN user manual subsection \textbf{PostProcessor}
+The details about this post-processor can be found in the RAVEN user manual subsection \textbf{PostProcessor}
 in the \textbf{Models} section.
 
-\subsection{ET Importer reference tests}
+\subsection{ET Importer Reference Tests}
 \begin{itemize}
 	\item test\_ETimporter.xml
 	\item test\_ETimporterMultipleET.xml
