--- a/doc/user_manual/include/FTdataImporter.tex
+++ b/doc/user_manual/include/FTdataImporter.tex
@@ -1,12 +1,12 @@
-\section{FT Data Importer}
+\section{Fault Tree Data Importer}
 \label{sec:FTdataImporter}
 
-This post-processor is designed to import a FT as a PointSet in RAVEN.
+This post processor is designed to import a FT as a PointSet in RAVEN.
 The FT must be in: the OpenPSA format (\href{<url>}{https://github.com/open-psa}).
-The details about this post-processor can be found in RAVEN user manual subsection \textbf{PostProcessor}
+The details about this post-processor can be found in the RAVEN user manual subsection \textbf{PostProcessor}
 in the \textbf{Models} section.
 
-\subsection{FT Importer reference tests}
+\subsection{FT Importer Reference Tests}
 \begin{itemize}
 	\item test\_FTimporter\_and\_withNOT\_embedded.xml
 	\item test\_FTimporter\_and\_withNOT\_withNOT\_embedded.xml
