--- a/doc/user_manual/user_manual.bib
+++ b/doc/user_manual/user_manual.bib
@@ -8,7 +8,7 @@
 	Year = {March 2017}}
 @techreport{RAVENtheoryMan,
 	Author = {A. Alfonsi and C. Rabiti and D. Mandelli and J. Cogliati and C. Wang and P. W. Talbot and D. P. Maljovec and C. Smith},
-	title = {RAVEN Theory Manual and User Guide},
+	title = {RAVEN Theory Manual},
 	institution = {Idaho National Laboratory (INL)},
 	booktitle = {INL/EXT-16-38178},
 	year = {2017}}
