--- a/doc/user_manual/Introduction.tex
+++ b/doc/user_manual/Introduction.tex
@@ -1,38 +1,38 @@
 \section{Introduction}
 \label{sec:Introduction}
 
-SR2ML is a software package which contains a set of safety and reliability models
-designed to be interfaced with the INL developed RAVEN code. These models can be
-employed to perform both static and dynamic system risk analysis and determine
-risk importance of specific elements of the considered system.
+SR2ML is a software package that contains a set of safety and reliability models
+designed to be interfaced with the INL's RAVEN code. These models can be
+employed to perform both static and dynamic system risk analyses and to determine
+the risk importance of specific elements of the considered system.
 
 Two classes of reliability models have been developed; the first class includes
-all classical reliability models (Fault-Trees, Event-Trees, Markov models and
-Reliability Block Diagrams) which have been extended to deal not only with
-Boolean logic values but also time dependent values. The second class includes
-several components aging and maintenance models. Models of these two classes are designed to
-be included in a RAVEN ensemble model to perform time dependent system reliability
+all classical reliability models (fault trees, event trees, Markov models and
+reliability block diagrams) which have been extended to not only deal with
+Boolean logic values but also time-dependent values. The second class includes
+several component aging and maintenance models. Models of these two classes are designed to
+be included in a RAVEN ensemble model to perform a time-dependent system reliability
 analysis (dynamic analysis). Similarly, these models can be interfaced with system
-analysis codes  to determine failure time of systems and evaluate accident progression
+analysis codes  to determine the failure time of systems and evaluate the accident progression
 (static analysis).
 
 \subsection{Acquiring and Installing SR2ML}
 SR2ML is supported on three separate computing platforms: Linux, OSX (Apple Macintosh), and Microsoft
 Windows. Currently, SR2ML is downloadable from the SR2ML GitLab repository:
 \url{https://hpcgitlab.hpc.inl.gov/RAVEN_PLUGINS/SR2ML.git}. New users should contact SR2ML developers to
-get started with SR2ML. This typically involves the following steps:
+get started. This typically involves the following steps:
 
 \begin{itemize}
   \item \textit{Download SR2ML}
-    \\ You can download the source code for SR2ML from \url{https://hpcgitlab.hpc.inl.gov/RAVEN_PLUGINS/SR2ML.git}.
-	\item \textit{Use as a RAVEN Plugin}, RAVEN must first be downloaded from
-  \url{https://github.com/idaholab/raven.git}.
+    \\ You can download the source code from \url{https://github.com/idaholab/SR2ML.git}.
+	\item \textit{Use as a RAVEN Plugin},
+    \\RAVEN must first be downloaded from \url{https://github.com/idaholab/raven.git}.
 		\\ Detailed instructions are available from \url{https://github.com/idaholab/raven/wiki}.
     To register a plugin with RAVEN and make its components accessible, run the script:
-    \begin{lstlisting}[language=bash]
-  	raven/scripts/install_plugins.py -s /abs/path/to/SR2ML
-  	\end{lstlisting}
-    After the plugin registration, then following the installation instruction at
+\begin{lstlisting}[language=bash]
+raven/scripts/install_plugins.py -s /abs/path/to/SR2ML
+\end{lstlisting}
+    After the plugin registration, follow the installation instructions at
     \url{https://github.com/idaholab/raven/wiki/installationMain} to install the
     required dependencies.
 \end{itemize}
@@ -50,7 +50,7 @@ The syntax is given in Listing \ref{lst:SR2MLfromRAVEN}.
 
 \subsection{User Manual Formats}
 In this manual, we employ the following formats to highlight certain parts with
-particular meanings (i.e. input structure, examples, and terminal commands):
+particular meanings (i.e., input structure, examples, and terminal commands):
 
 \begin{itemize}
 \item \textbf{\textit{Python Coding:}}
@@ -78,7 +78,7 @@ cd ../../
 \end{itemize}
 
 \subsection{Capabilities of SR2ML}
-This document provides a detailed description of the SR2ML plugin for the RAVEN~\cite{RAVEN,RAVENtheoryMan} code.
+This document provides a detailed description of the SR2ML plugin for the RAVEN code~\cite{RAVEN,RAVENtheoryMan}.
 The features included in this plugin are:
 \begin{itemize}
 	\item Event Tree (ET) Model (see Section~\ref{sec:ETModel})
